--- a/spectrum-web/src/main/webapp/coach/Coach.xhtml
+++ b/spectrum-web/src/main/webapp/coach/Coach.xhtml
@@ -8,7 +8,7 @@ xmlns="http://www.w3.org/1999/xhtml"
 
 <ui:define name="content">
 	<div class="cover-sec">
-			<h:graphicImage value="/resources/images/resources/cover-img.jpg" alt=""/>
+			<h:graphicImage value="/images/cover-img.jpg" alt=""/>
 		</div>
 			<div class="main-section-data">
 						<div class="row">
@@ -16,7 +16,7 @@ xmlns="http://www.w3.org/1999/xhtml"
 		<div class="main-left-sidebar">
 <div class="user_profile">
 										<div class="user-pro-img">
-											<h:graphicImage value="/resources/images/resources/user-pro-img.png" />
+											<h:graphicImage value="/images/user-pro-img.png" />
 										</div><!--user-pro-img end-->
 										<div class="user_pro_status">
 											<ul class="flw-hr">
@@ -52,7 +52,7 @@ xmlns="http://www.w3.org/1999/xhtml"
 										</div><!--sd-title end-->
 										<div class="suggestions-list">
 											<div class="suggestion-usd">
-												<h:graphicImage value="/resources/images/resources/s1.png" alt=""/>
+												<h:graphicImage value="/images/s1.png" alt=""/>
 												<div class="sgt-text">
 													<h4>Jessica William</h4>
 													<span>Graphic Designer</span>
@@ -60,7 +60,7 @@ xmlns="http://www.w3.org/1999/xhtml"
 												<span><i class="la la-plus"></i></span>
 											</div>
 											<div class="suggestion-usd">
-												<h:graphicImage value="/resources/images/resources/s2.png" alt=""/>
+												<h:graphicImage value="/images/s2.png" alt=""/>
 												<div class="sgt-text">
 													<h4>John Doe</h4>
 													<span>PHP Developer</span>
@@ -68,7 +68,7 @@ xmlns="http://www.w3.org/1999/xhtml"
 												<span><i class="la la-plus"></i></span>
 											</div>
 											<div class="suggestion-usd">
-											<h:graphicImage value="/resources/images/resources/s3.png" alt=""/>
+											<h:graphicImage value="/images/s3.png" alt=""/>
 												<div class="sgt-text">
 													<h4>Poonam</h4>
 													<span>Wordpress Developer</span>
@@ -76,7 +76,7 @@ xmlns="http://www.w3.org/1999/xhtml"
 												<span><i class="la la-plus"></i></span>
 											</div>
 											<div class="suggestion-usd">
-												<h:graphicImage value="/resources/images/resources/s4.png" alt=""/>
+												<h:graphicImage value="/images/s4.png" alt=""/>
 												<div class="sgt-text">
 													<h4>Bill Gates</h4>
 													<span>C  C++ Developer</span>
@@ -84,7 +84,7 @@ xmlns="http://www.w3.org/1999/xhtml"
 												<span><i class="la la-plus"></i></span>
 											</div>
 											<div class="suggestion-usd">
-												<h:graphicImage value="/resources/images/resources/s5.png" alt=""/>
+												<h:graphicImage value="/images/s5.png" alt=""/>
 												<div class="sgt-text">
 													<h4>Jessica William</h4>
 													<span>Graphic Designer</span>
@@ -92,7 +92,7 @@ xmlns="http://www.w3.org/1999/xhtml"
 												<span><i class="la la-plus"></i></span>
 											</div>
 											<div class="suggestion-usd">
-												<h:graphicImage value="/resources/images/resources/s6.png" alt=""/>
+												<h:graphicImage value="/images/s6.png" alt=""/>
 												<div class="sgt-text">
 													<h4>John Doe</h4>
 													<span>PHP Developer</span>
@@ -122,19 +122,19 @@ xmlns="http://www.w3.org/1999/xhtml"
 											<ul>
 												<li data-tab="feed-dd" class="active">
 													<a href="#" title="">
-														<h:graphicImage value="/resources/images/ic1.png" alt=""/>
+														<h:graphicImage value="/images/ic1.png" alt=""/>
 														<span>Feed</span>
 													</a>
 												</li>
 												<li data-tab="info-dd">
 													<a href="#" title="">
-														<h:graphicImage value="/resources/images/ic2.png" alt=""/>
+														<h:graphicImage value="/images/ic2.png" alt=""/>
 														<span>Info</span>
 													</a>
 												</li>
 												<li data-tab="portfolio-dd">
 													<a href="#" title="">
-														<h:graphicImage value="/resources/images/ic3.png" alt=""/>
+														<h:graphicImage value="/images/ic3.png" alt=""/>
 														<span>Coaching offer</span>
 													</a>
 												</li>
