--- a/spectrum-web/src/main/webapp/coach/index2.xhtml
+++ b/spectrum-web/src/main/webapp/coach/index2.xhtml
@@ -43,7 +43,7 @@
 										<div class="suggestions-list">
 										<ui:repeat var="u" value="#{enterprisebean.userList}">
 											<div class="suggestion-usd">
-												<img src="images/resources/s1.png" alt="" />
+												<img src="images/s1.png" alt="" />
 												<div class="sgt-text">
 													<h4>#{u.getName()} </h4>
 													<span>Graphic Designer</span>
