--- a/spectrum-web/src/main/webapp/coach/profile-account-setting.xhtml
+++ b/spectrum-web/src/main/webapp/coach/profile-account-setting.xhtml
@@ -189,7 +189,7 @@
 							  			<div class="notifications-list">
 							  				<div class="notfication-details">
 								  				<div class="noty-user-img">
-								  					<img src="images/resources/ny-img1.png" alt=""/>
+								  					<img src="images/ny-img1.png" alt=""/>
 								  				</div>
 								  				<div class="notification-info">
 								  					<h3><a href="#" title="">Jassica William</a> Comment on your project.</h3>
@@ -198,7 +198,7 @@
 							  				</div><!--notfication-details end-->
 							  				<div class="notfication-details">
 								  				<div class="noty-user-img">
-								  					<img src="images/resources/ny-img2.png" alt=""/>
+								  					<img src="images/ny-img2.png" alt=""/>
 								  				</div>
 								  				<div class="notification-info">
 								  					<h3><a href="#" title="">Poonam Verma</a> Bid on your Latest project.</h3>
@@ -207,7 +207,7 @@
 							  				</div><!--notfication-details end-->
 							  				<div class="notfication-details">
 								  				<div class="noty-user-img">
-								  					<img src="images/resources/ny-img3.png" alt=""/>
+								  					<img src="images/ny-img3.png" alt=""/>
 								  				</div>
 								  				<div class="notification-info">
 								  					<h3><a href="#" title="">Tonney Dhman</a> Comment on your project.</h3>
@@ -216,7 +216,7 @@
 							  				</div><!--notfication-details end-->
 							  				<div class="notfication-details">
 								  				<div class="noty-user-img">
-								  					<img src="images/resources/ny-img1.png" alt=""/>
+								  					<img src="images/ny-img1.png" alt=""/>
 								  				</div>
 								  				<div class="notification-info">
 								  					<h3><a href="#" title="">Jassica William</a> Comment on your project.</h3>
@@ -225,7 +225,7 @@
 							  				</div><!--notfication-details end-->
 							  				<div class="notfication-details">
 								  				<div class="noty-user-img">
-								  					<img src="images/resources/ny-img1.png" alt=""/>
+								  					<img src="images/ny-img1.png" alt=""/>
 								  				</div>
 								  				<div class="notification-info">
 								  					<h3><a href="#" title="">Jassica William</a> Comment on your project.</h3>
@@ -234,7 +234,7 @@
 							  				</div><!--notfication-details end-->
 							  				<div class="notfication-details">
 								  				<div class="noty-user-img">
-								  					<img src="images/resources/ny-img2.png" alt=""/>
+								  					<img src="images/ny-img2.png" alt=""/>
 								  				</div>
 								  				<div class="notification-info">
 								  					<h3><a href="#" title="">Poonam Verma </a> Bid on your Latest project.</h3>
@@ -243,7 +243,7 @@
 							  				</div><!--notfication-details end-->
 							  				<div class="notfication-details">
 								  				<div class="noty-user-img">
-								  					<img src="images/resources/ny-img3.png" alt=""/>
+								  					<img src="images/ny-img3.png" alt=""/>
 								  				</div>
 								  				<div class="notification-info">
 								  					<h3><a href="#" title="">Tonney Dhman</a> Comment on your project</h3>
@@ -252,7 +252,7 @@
 							  				</div><!--notfication-details end-->
 							  				<div class="notfication-details">
 								  				<div class="noty-user-img">
-								  					<img src="images/resources/ny-img1.png" alt=""/>
+								  					<img src="images/ny-img1.png" alt=""/>
 								  				</div>
 								  				<div class="notification-info">
 								  					<h3><a href="#" title="">Jassica William</a> Comment on your project.</h3>
@@ -268,7 +268,7 @@
 							  			<div class="requests-list">
 							  				<div class="request-details">
 							  					<div class="noty-user-img">
-							  						<img src="images/resources/r-img1.png" alt=""/>
+							  						<img src="images/r-img1.png" alt=""/>
 							  					</div>
 							  					<div class="request-info">
 							  						<h3>Jessica William</h3>
@@ -283,7 +283,7 @@
 							  				</div><!--request-detailse end-->
 							  				<div class="request-details">
 							  					<div class="noty-user-img">
-							  						<img src="images/resources/r-img2.png" alt=""/>
+							  						<img src="images/r-img2.png" alt=""/>
 							  					</div>
 							  					<div class="request-info">
 							  						<h3>John Doe</h3>
@@ -298,7 +298,7 @@
 							  				</div><!--request-detailse end-->
 							  				<div class="request-details">
 							  					<div class="noty-user-img">
-							  						<img src="images/resources/r-img3.png" alt=""/>
+							  						<img src="images/r-img3.png" alt=""/>
 							  					</div>
 							  					<div class="request-info">
 							  						<h3>Poonam</h3>
@@ -313,7 +313,7 @@
 							  				</div><!--request-detailse end-->
 							  				<div class="request-details">
 							  					<div class="noty-user-img">
-							  						<img src="images/resources/r-img4.png" alt=""/>
+							  						<img src="images/r-img4.png" alt=""/>
 							  					</div>
 							  					<div class="request-info">
 							  						<h3>Bill Gates</h3>
@@ -328,7 +328,7 @@
 							  				</div><!--request-detailse end-->
 							  				<div class="request-details">
 							  					<div class="noty-user-img">
-							  						<img src="images/resources/r-img5.png" alt=""/>
+							  						<img src="images/r-img5.png" alt=""/>
 							  					</div>
 							  					<div class="request-info">
 							  						<h3>Jessica William</h3>
@@ -343,7 +343,7 @@
 							  				</div><!--request-detailse end-->
 							  				<div class="request-details">
 							  					<div class="noty-user-img">
-							  						<img src="images/resources/r-img6.png" alt=""/>
+							  						<img src="images/r-img6.png" alt=""/>
 							  					</div>
 							  					<div class="request-info">
 							  						<h3>John Doe</h3>
