--- a/spectrum-web/src/main/webapp/enterprise/companies_profiles.xhtml
+++ b/spectrum-web/src/main/webapp/enterprise/companies_profiles.xhtml
@@ -91,7 +91,7 @@
 									<div class="nott-list">
 										<div class="notfication-details">
 							  				<div class="noty-user-img">
-							  					<img src="images/resources/ny-img1.png" alt="" />
+							  					<img src="images/ny-img1.png" alt="" />
 							  				</div>
 							  				<div class="notification-info">
 							  					<h3><a href="messages.jsf" title="">Jassica William</a> </h3>
@@ -101,7 +101,7 @@
 						  				</div>
 						  				<div class="notfication-details">
 							  				<div class="noty-user-img">
-							  					<img src="images/resources/ny-img2.png" alt="" />
+							  					<img src="images/ny-img2.png" alt="" />
 							  				</div>
 							  				<div class="notification-info">
 							  					<h3><a href="messages.jsf" title="">Jassica William</a></h3>
@@ -111,7 +111,7 @@
 						  				</div>
 						  				<div class="notfication-details">
 							  				<div class="noty-user-img">
-							  					<img src="images/resources/ny-img3.png" alt="" />
+							  					<img src="images/ny-img3.png" alt="" />
 							  				</div>
 							  				<div class="notification-info">
 							  					<h3><a href="messages.jsf" title="">Jassica William</a></h3>
@@ -138,7 +138,7 @@
 									<div class="nott-list">
 										<div class="notfication-details">
 							  				<div class="noty-user-img">
-							  					<img src="images/resources/ny-img1.png" alt="" />
+							  					<img src="images/ny-img1.png" alt="" />
 							  				</div>
 							  				<div class="notification-info">
 							  					<h3><a href="#" title="">Jassica William</a> Comment on your project.</h3>
@@ -147,7 +147,7 @@
 						  				</div>
 						  				<div class="notfication-details">
 							  				<div class="noty-user-img">
-							  					<img src="images/resources/ny-img2.png" alt="" />
+							  					<img src="images/ny-img2.png" alt="" />
 							  				</div>
 							  				<div class="notification-info">
 							  					<h3><a href="#" title="">Jassica William</a> Comment on your project.</h3>
@@ -156,7 +156,7 @@
 						  				</div>
 						  				<div class="notfication-details">
 							  				<div class="noty-user-img">
-							  					<img src="images/resources/ny-img3.png" alt="" />
+							  					<img src="images/ny-img3.png" alt="" />
 							  				</div>
 							  				<div class="notification-info">
 							  					<h3><a href="#" title="">Jassica William</a> Comment on your project.</h3>
@@ -165,7 +165,7 @@
 						  				</div>
 						  				<div class="notfication-details">
 							  				<div class="noty-user-img">
-							  					<img src="images/resources/ny-img2.png" alt="" />
+							  					<img src="images/ny-img2.png" alt="" />
 							  				</div>
 							  				<div class="notification-info">
 							  					<h3><a href="#" title="">Jassica William</a> Comment on your project.</h3>
@@ -185,7 +185,7 @@
 					</div><!--menu-btn end-->
 					<div class="user-account">
 						<div class="user-info">
-							<img src="images/resources/user.png" alt="" />
+							<img src="images/user.png" alt="" />
 							<a href="#" title="">John</a>
 							<i class="la la-sort-down"></i>
 						</div>
@@ -253,7 +253,7 @@
 						<div class="col-lg-3 col-md-4 col-sm-6 col-12">
 							<div class="company_profile_info">
 								<div class="company-up-info">
-									<img src="images/resources/pf-icon1.png" alt="" />
+									<img src="images/pf-icon1.png" alt="" />
 									<h3>#{u.getName()}</h3>
 									<h4>#{u.getRole()}</h4>
 									<ul>
