--- a/spectrum-web/src/main/webapp/enterprise/index2.xhtml
+++ b/spectrum-web/src/main/webapp/enterprise/index2.xhtml
@@ -54,7 +54,7 @@
 										<div class="suggestions-list">
 										<ui:repeat var="u" value="#{enterprisebean.userList}">
 											<div class="suggestion-usd">
-												<img src="images/resources/s1.png" alt="" />
+												<img src="images/s1.png" alt="" />
 												<div class="sgt-text">
 													<h4>#{u.getName()} </h4>
 													<span>Graphic Designer</span>
@@ -74,7 +74,7 @@
 						<div class="col-lg-3 col-md-4 col-sm-6 col-12">
 							<div class="company_profile_info">
 								<div class="company-up-info">
-									<img src="images/resources/pf-icon1.png" alt="" />
+									<img src="images/pf-icon1.png" alt="" />
 									<h3>#{u.getName()}</h3>
 									<h4>#{u.getRole()}</h4>
 									<ul>
