--- a/spectrum-web/src/main/webapp/enterprise/profile-account-setting.xhtml
+++ b/spectrum-web/src/main/webapp/enterprise/profile-account-setting.xhtml
@@ -81,7 +81,7 @@
 									<div class="nott-list">
 										<div class="notfication-details">
 							  				<div class="noty-user-img">
-							  					<img src="images/resources/ny-img1.png" alt="" />
+							  					<img src="images/ny-img1.png" alt="" />
 							  				</div>
 							  				<div class="notification-info">
 							  					<h3><a href="messages.jsf" title="">Jassica William</a> </h3>
@@ -91,7 +91,7 @@
 						  				</div>
 						  				<div class="notfication-details">
 							  				<div class="noty-user-img">
-							  					<img src="images/resources/ny-img2.png" alt="" />
+							  					<img src="images/ny-img2.png" alt="" />
 							  				</div>
 							  				<div class="notification-info">
 							  					<h3><a href="messages.jsf" title="">Jassica William</a></h3>
@@ -101,7 +101,7 @@
 						  				</div>
 						  				<div class="notfication-details">
 							  				<div class="noty-user-img">
-							  					<img src="images/resources/ny-img3.png" alt="" />
+							  					<img src="images/ny-img3.png" alt="" />
 							  				</div>
 							  				<div class="notification-info">
 							  					<h3><a href="messages.jsf" title="">Jassica William</a></h3>
@@ -128,7 +128,7 @@
 									<div class="nott-list">
 										<div class="notfication-details">
 							  				<div class="noty-user-img">
-							  					<img src="images/resources/ny-img1.png" alt="" />
+							  					<img src="images/ny-img1.png" alt="" />
 							  				</div>
 							  				<div class="notification-info">
 							  					<h3><a href="#" title="">Jassica William</a> Comment on your project.</h3>
@@ -137,7 +137,7 @@
 						  				</div>
 						  				<div class="notfication-details">
 							  				<div class="noty-user-img">
-							  					<img src="images/resources/ny-img2.png" alt="" />
+							  					<img src="images/ny-img2.png" alt="" />
 							  				</div>
 							  				<div class="notification-info">
 							  					<h3><a href="#" title="">Jassica William</a> Comment on your project.</h3>
@@ -146,7 +146,7 @@
 						  				</div>
 						  				<div class="notfication-details">
 							  				<div class="noty-user-img">
-							  					<img src="images/resources/ny-img3.png" alt="" />
+							  					<img src="images/ny-img3.png" alt="" />
 							  				</div>
 							  				<div class="notification-info">
 							  					<h3><a href="#" title="">Jassica William</a> Comment on your project.</h3>
@@ -155,7 +155,7 @@
 						  				</div>
 						  				<div class="notfication-details">
 							  				<div class="noty-user-img">
-							  					<img src="images/resources/ny-img2.png" alt="" />
+							  					<img src="images/ny-img2.png" alt="" />
 							  				</div>
 							  				<div class="notification-info">
 							  					<h3><a href="#" title="">Jassica William</a> Comment on your project.</h3>
@@ -175,7 +175,7 @@
 					</div><!--menu-btn end-->
 					<div class="user-account">
 						<div class="user-info">
-							<img src="images/resources/user.png" alt="" />
+							<img src="images/user.png" alt="" />
 							<a href="#" title="">John</a>
 							<i class="la la-sort-down"></i>
 						</div>
@@ -423,7 +423,7 @@
 							  			<div class="notifications-list">
 							  				<div class="notfication-details">
 								  				<div class="noty-user-img">
-								  					<img src="images/resources/ny-img1.png" alt="" />
+								  					<img src="images/ny-img1.png" alt="" />
 								  				</div>
 								  				<div class="notification-info">
 								  					<h3><a href="#" title="">Jassica William</a> Comment on your project.</h3>
@@ -432,7 +432,7 @@
 							  				</div><!--notfication-details end-->
 							  				<div class="notfication-details">
 								  				<div class="noty-user-img">
-								  					<img src="images/resources/ny-img2.png" alt="" />
+								  					<img src="images/ny-img2.png" alt="" />
 								  				</div>
 								  				<div class="notification-info">
 								  					<h3><a href="#" title="">Poonam Verma</a> Bid on your Latest project.</h3>
@@ -441,7 +441,7 @@
 							  				</div><!--notfication-details end-->
 							  				<div class="notfication-details">
 								  				<div class="noty-user-img">
-								  					<img src="images/resources/ny-img3.png" alt="" />
+								  					<img src="images/ny-img3.png" alt="" />
 								  				</div>
 								  				<div class="notification-info">
 								  					<h3><a href="#" title="">Tonney Dhman</a> Comment on your project.</h3>
@@ -450,7 +450,7 @@
 							  				</div><!--notfication-details end-->
 							  				<div class="notfication-details">
 								  				<div class="noty-user-img">
-								  					<img src="images/resources/ny-img1.png" alt="" />
+								  					<img src="images/ny-img1.png" alt="" />
 								  				</div>
 								  				<div class="notification-info">
 								  					<h3><a href="#" title="">Jassica William</a> Comment on your project.</h3>
@@ -459,7 +459,7 @@
 							  				</div><!--notfication-details end-->
 							  				<div class="notfication-details">
 								  				<div class="noty-user-img">
-								  					<img src="images/resources/ny-img1.png" alt="" />
+								  					<img src="images/ny-img1.png" alt="" />
 								  				</div>
 								  				<div class="notification-info">
 								  					<h3><a href="#" title="">Jassica William</a> Comment on your project.</h3>
@@ -468,7 +468,7 @@
 							  				</div><!--notfication-details end-->
 							  				<div class="notfication-details">
 								  				<div class="noty-user-img">
-								  					<img src="images/resources/ny-img2.png" alt="" />
+								  					<img src="images/ny-img2.png" alt="" />
 								  				</div>
 								  				<div class="notification-info">
 								  					<h3><a href="#" title="">Poonam Verma </a> Bid on your Latest project.</h3>
@@ -477,7 +477,7 @@
 							  				</div><!--notfication-details end-->
 							  				<div class="notfication-details">
 								  				<div class="noty-user-img">
-								  					<img src="images/resources/ny-img3.png" alt="" />
+								  					<img src="images/ny-img3.png" alt="" />
 								  				</div>
 								  				<div class="notification-info">
 								  					<h3><a href="#" title="">Tonney Dhman</a> Comment on your project</h3>
@@ -486,7 +486,7 @@
 							  				</div><!--notfication-details end-->
 							  				<div class="notfication-details">
 								  				<div class="noty-user-img">
-								  					<img src="images/resources/ny-img1.png" alt="" />
+								  					<img src="images/ny-img1.png" alt="" />
 								  				</div>
 								  				<div class="notification-info">
 								  					<h3><a href="#" title="">Jassica William</a> Comment on your project.</h3>
@@ -502,7 +502,7 @@
 							  			<div class="requests-list">
 							  				<div class="request-details">
 							  					<div class="noty-user-img">
-							  						<img src="images/resources/r-img1.png" alt="" />
+							  						<img src="images/r-img1.png" alt="" />
 							  					</div>
 							  					<div class="request-info">
 							  						<h3>Jessica William</h3>
@@ -517,7 +517,7 @@
 							  				</div><!--request-detailse end-->
 							  				<div class="request-details">
 							  					<div class="noty-user-img">
-							  						<img src="images/resources/r-img2.png" alt="" />
+							  						<img src="images/r-img2.png" alt="" />
 							  					</div>
 							  					<div class="request-info">
 							  						<h3>John Doe</h3>
@@ -532,7 +532,7 @@
 							  				</div><!--request-detailse end-->
 							  				<div class="request-details">
 							  					<div class="noty-user-img">
-							  						<img src="images/resources/r-img3.png" alt="" />
+							  						<img src="images/r-img3.png" alt="" />
 							  					</div>
 							  					<div class="request-info">
 							  						<h3>Poonam</h3>
@@ -547,7 +547,7 @@
 							  				</div><!--request-detailse end-->
 							  				<div class="request-details">
 							  					<div class="noty-user-img">
-							  						<img src="images/resources/r-img4.png" alt="" />
+							  						<img src="images/r-img4.png" alt="" />
 							  					</div>
 							  					<div class="request-info">
 							  						<h3>Bill Gates</h3>
@@ -562,7 +562,7 @@
 							  				</div><!--request-detailse end-->
 							  				<div class="request-details">
 							  					<div class="noty-user-img">
-							  						<img src="images/resources/r-img5.png" alt="" />
+							  						<img src="images/r-img5.png" alt="" />
 							  					</div>
 							  					<div class="request-info">
 							  						<h3>Jessica William</h3>
@@ -577,7 +577,7 @@
 							  				</div><!--request-detailse end-->
 							  				<div class="request-details">
 							  					<div class="noty-user-img">
-							  						<img src="images/resources/r-img6.png" alt="" />
+							  						<img src="images/r-img6.png" alt="" />
 							  					</div>
 							  					<div class="request-info">
 							  						<h3>John Doe</h3>
