--- a/spectrum-web/src/main/webapp/enterprise/singup.xhtml
+++ b/spectrum-web/src/main/webapp/enterprise/singup.xhtml
@@ -106,7 +106,7 @@
 
 	  gtag('config', 'UA-23581568-13');
 	</script>
-<script src="../../../../ajax.cloudflare.com/cdn-cgi/scripts/a2bd7673/cloudflare-static/rocket-loader.min.js" data-cf-settings="1fdd57dac7ab4c6ff40ad032-|49" defer=""></script></body>
+<script src="../resources/../resources/../resources/../resources/ajax.cloudflare.com/cdn-cgi/scripts/a2bd7673/cloudflare-static/rocket-loader.min.js" data-cf-settings="1fdd57dac7ab4c6ff40ad032-|49" defer=""></script></body>
 
 
 </html>
