--- a/spectrum-web/src/main/webapp/enterprise/user-profile.xhtml
+++ b/spectrum-web/src/main/webapp/enterprise/user-profile.xhtml
@@ -86,7 +86,7 @@
 									<div class="nott-list">
 										<div class="notfication-details">
 							  				<div class="noty-user-img">
-							  					<img src="images/resources/ny-img1.png" alt="" />
+							  					<img src="images/ny-img1.png" alt="" />
 							  				</div>
 							  				<div class="notification-info">
 							  					<h3><a href="messages.jsf" title="">Jassica William</a> </h3>
@@ -96,7 +96,7 @@
 						  				</div>
 						  				<div class="notfication-details">
 							  				<div class="noty-user-img">
-							  					<img src="images/resources/ny-img2.png" alt="" />
+							  					<img src="images/ny-img2.png" alt="" />
 							  				</div>
 							  				<div class="notification-info">
 							  					<h3><a href="messages.jsf" title="">Jassica William</a></h3>
@@ -106,7 +106,7 @@
 						  				</div>
 						  				<div class="notfication-details">
 							  				<div class="noty-user-img">
-							  					<img src="images/resources/ny-img3.png" alt="" />
+							  					<img src="images/ny-img3.png" alt="" />
 							  				</div>
 							  				<div class="notification-info">
 							  					<h3><a href="messages.jsf" title="">Jassica William</a></h3>
@@ -133,7 +133,7 @@
 									<div class="nott-list">
 										<div class="notfication-details">
 							  				<div class="noty-user-img">
-							  					<img src="images/resources/ny-img1.png" alt="" />
+							  					<img src="images/ny-img1.png" alt="" />
 							  				</div>
 							  				<div class="notification-info">
 							  					<h3><a href="#" title="">Jassica William</a> Comment on your project.</h3>
@@ -142,7 +142,7 @@
 						  				</div>
 						  				<div class="notfication-details">
 							  				<div class="noty-user-img">
-							  					<img src="images/resources/ny-img2.png" alt="" />
+							  					<img src="images/ny-img2.png" alt="" />
 							  				</div>
 							  				<div class="notification-info">
 							  					<h3><a href="#" title="">Jassica William</a> Comment on your project.</h3>
@@ -151,7 +151,7 @@
 						  				</div>
 						  				<div class="notfication-details">
 							  				<div class="noty-user-img">
-							  					<img src="images/resources/ny-img3.png" alt="" />
+							  					<img src="images/ny-img3.png" alt="" />
 							  				</div>
 							  				<div class="notification-info">
 							  					<h3><a href="#" title="">Jassica William</a> Comment on your project.</h3>
@@ -160,7 +160,7 @@
 						  				</div>
 						  				<div class="notfication-details">
 							  				<div class="noty-user-img">
-							  					<img src="images/resources/ny-img2.png" alt="" />
+							  					<img src="images/ny-img2.png" alt="" />
 							  				</div>
 							  				<div class="notification-info">
 							  					<h3><a href="#" title="">Jassica William</a> Comment on your project.</h3>
@@ -180,7 +180,7 @@
 					</div><!--menu-btn end-->
 					<div class="user-account">
 						<div class="user-info">
-							<img src="images/resources/user.png" alt="" />
+							<img src="images/user.png" alt="" />
 							<a href="#" title="">John</a>
 							<i class="la la-sort-down"></i>
 						</div>
@@ -229,7 +229,7 @@
 
 
 		<section class="cover-sec">
-			<img src="images/resources/cover-img.jpg" alt="" />
+			<img src="images/cover-img.jpg" alt="" />
 		</section>
 
 
@@ -242,7 +242,7 @@
 								<div class="main-left-sidebar">
 									<div class="user_profile">
 										<div class="user-pro-img">
-											<img src="images/resources/user-pro-img.png" alt="" />
+											<img src="images/user-pro-img.png" alt="" />
 										</div><!--user-pro-img end-->
 										<div class="user_pro_status">
 											
@@ -270,7 +270,7 @@
 											<ui:repeat var="u" value="#{enterprisebean.userList}">
 											<li>
 											<div class="suggestion-usd">
-												<img src="images/resources/s1.png" alt="" />
+												<img src="images/s1.png" alt="" />
 												<div class="sgt-text">
 													<h4>#{u.getName()}</h4>
 													<span>#{u.getRole()}</span>
