--- a/spectrum-web/src/main/webapp/jobs/jobs.xhtml
+++ b/spectrum-web/src/main/webapp/jobs/jobs.xhtml
@@ -3,7 +3,7 @@
 	xmlns:f="http://java.sun.com/jsf/core"
 	xmlns:h="http://java.sun.com/jsf/html"
 	xmlns:p="http://primefaces.org/ui"
-	template="../template/template.xhtml">
+	template="../resources/template/template.xhtml">
 
 <ui:define name="title">
 	<title>Jobs</title>
@@ -63,7 +63,7 @@
 									<div class="nott-list">
 										<div class="notfication-details">
 							  				<div class="noty-user-img">
-							  					<img src="../resources/images/resources/ny-img1.png" alt=""/>
+							  					<img src="../resources/images/ny-img1.png" alt=""/>
 							  				</div>
 							  				<div class="notification-info">
 							  					<h3><a href="messages.html" title="">Jassica William</a> </h3>
@@ -73,7 +73,7 @@
 						  				</div>
 						  				<div class="notfication-details">
 							  				<div class="noty-user-img">
-							  					<img src="../resources/images/resources/ny-img2.png" alt=""/>
+							  					<img src="../resources/images/ny-img2.png" alt=""/>
 							  				</div>
 							  				<div class="notification-info">
 							  					<h3><a href="messages.html" title="">Jassica William</a></h3>
@@ -83,7 +83,7 @@
 						  				</div>
 						  				<div class="notfication-details">
 							  				<div class="noty-user-img">
-							  					<img src="../resources/images/resources/ny-img3.png" alt=""/>
+							  					<img src="../resources/images/ny-img3.png" alt=""/>
 							  				</div>
 							  				<div class="notification-info">
 							  					<h3><a href="messages.html" title="">Jassica William</a></h3>
@@ -110,7 +110,7 @@
 									<div class="nott-list">
 										<div class="notfication-details">
 							  				<div class="noty-user-img">
-							  					<img src="../resources/images/resources/ny-img1.png" alt=""/>
+							  					<img src="../resources/images/ny-img1.png" alt=""/>
 							  				</div>
 							  				<div class="notification-info">
 							  					<h3><a href="#" title="">Jassica William</a> Comment on your project.</h3>
@@ -119,7 +119,7 @@
 						  				</div>
 						  				<div class="notfication-details">
 							  				<div class="noty-user-img">
-							  					<img src="../resources/images/resources/ny-img2.png" alt=""/>
+							  					<img src="../resources/images/ny-img2.png" alt=""/>
 							  				</div>
 							  				<div class="notification-info">
 							  					<h3><a href="#" title="">Jassica William</a> Comment on your project.</h3>
@@ -128,7 +128,7 @@
 						  				</div>
 						  				<div class="notfication-details">
 							  				<div class="noty-user-img">
-							  					<img src="../resources/images/resources/ny-img3.png" alt=""/>
+							  					<img src="../resources/images/ny-img3.png" alt=""/>
 							  				</div>
 							  				<div class="notification-info">
 							  					<h3><a href="#" title="">Jassica William</a> Comment on your project.</h3>
@@ -137,7 +137,7 @@
 						  				</div>
 						  				<div class="notfication-details">
 							  				<div class="noty-user-img">
-							  					<img src="..resources/images/resources/ny-img2.png" alt=""/>
+							  					<img src="..resources/images/ny-img2.png" alt=""/>
 							  				</div>
 							  				<div class="notification-info">
 							  					<h3><a href="#" title="">Jassica William</a> Comment on your project.</h3>
@@ -157,7 +157,7 @@
 					</div><!--menu-btn end-->
 					<div class="user-account">
 						<div class="user-info">
-							<img src="../resources/images/resources/user.png" alt=""/>
+							<img src="../resources/images/user.png" alt=""/>
 							<a href="#" title="">John</a>
 							<i class="la la-sort-down"></i>
 						</div>
