--- a/spectrum-web/src/main/webapp/publicity/mesReclamations.xhtml
+++ b/spectrum-web/src/main/webapp/publicity/mesReclamations.xhtml
@@ -65,7 +65,7 @@
 							  			<ui:repeat  value="#{reclamationBean.mine}" var="reclamation" varStatus="loop" class="requests-list">
 							  				<div class="request-details">
 							  					<div class="noty-user-img">
-							  						<img src="resources/images/resources/r-img1.png" alt=""/>
+							  						<img src="resources/images/r-img1.png" alt=""/>
 							  					</div>
 							  					<div class="request-info">
 							  						<h3>#{reclamation.reclamedBy.nom}</h3>
