--- a/spectrum-web/src/main/webapp/publicity/targets.xhtml
+++ b/spectrum-web/src/main/webapp/publicity/targets.xhtml
@@ -40,7 +40,7 @@
 							  			<ui:repeat  value="#{targetBean.targets}" var="publicity" varStatus="loop" class="requests-list">
 							  				<div class="request-details">
 							  					<div class="noty-user-img">
-							  						<img src="resources/images/resources/r-img1.png" alt=""/>
+							  						<img src="resources/images/r-img1.png" alt=""/>
 							  					</div>
 							  					<div class="request-info">
 							  						<h3>#{publicity.name}</h3>
