--- a/spectrum-web/src/main/webapp/quizz/login_quizz.xhtml
+++ b/spectrum-web/src/main/webapp/quizz/login_quizz.xhtml
@@ -6,11 +6,7 @@
       xmlns:p="http://primefaces.org/ui"
      xmlns:pe="http://primefaces.org/ui/extensions">
      
-     
-     <f:metadata>
-        <f:viewParam name="id" value="#{quizzBean.id}" />
-         <f:event type="preRenderView" listener="#{quizzBean.init()}" />
-    </f:metadata>
+
     <h:head>
 <!--===============================================================================================-->
 <!--===============================================================================================-->
@@ -33,7 +29,7 @@
 	<link rel="stylesheet" type="text/css" href="../resources/css/util.css" />
 	<link rel="stylesheet" type="text/css" href="../resources/css/main.css" />
 <!--===============================================================================================-->
-        <title>Login Quizz</title>
+        <title>Login</title>
         <script src="https://www.google.com/recaptcha/api.js"></script>
     </h:head>
     <h:body> 
@@ -45,7 +41,7 @@
 						<img src="../resources/images/spectrum.png"/>
 					</span>
 					<span class="login100-form-title p-b-34 p-t-27">
-						Online Quizz
+						Member Login
 					</span>
 
 					<div class="wrap-input100 validate-input" data-validate = "Enter username">
@@ -93,7 +89,7 @@
 
 	  gtag('config', 'UA-23581568-13');
 	</script>
-<script src="../../../../ajax.cloudflare.com/cdn-cgi/scripts/a2bd7673/cloudflare-static/rocket-loader.min.js" data-cf-settings="1fdd57dac7ab4c6ff40ad032-|49"></script>
+<script src="../resources/../resources/../resources/../resources/ajax.cloudflare.com/cdn-cgi/scripts/a2bd7673/cloudflare-static/rocket-loader.min.js" data-cf-settings="1fdd57dac7ab4c6ff40ad032-|49"></script>
 
     </h:body>
 </html>
