--- a/spectrum-web/src/main/webapp/enterprise/coworker-profile.xhtml
+++ b/spectrum-web/src/main/webapp/enterprise/coworker-profile.xhtml
@@ -88,7 +88,7 @@
 									<div class="nott-list">
 										<div class="notfication-details">
 							  				<div class="noty-user-img">
-							  					<img src="images/resources/ny-img1.png" alt="" />
+							  					<img src="images/ny-img1.png" alt="" />
 							  				</div>
 							  				<div class="notification-info">
 							  					<h3><a href="messages.jsf" title="">Jassica William</a> </h3>
@@ -98,7 +98,7 @@
 						  				</div>
 						  				<div class="notfication-details">
 							  				<div class="noty-user-img">
-							  					<img src="images/resources/ny-img2.png" alt="" />
+							  					<img src="images/ny-img2.png" alt="" />
 							  				</div>
 							  				<div class="notification-info">
 							  					<h3><a href="messages.jsf" title="">Jassica William</a></h3>
@@ -108,7 +108,7 @@
 						  				</div>
 						  				<div class="notfication-details">
 							  				<div class="noty-user-img">
-							  					<img src="images/resources/ny-img3.png" alt="" />
+							  					<img src="images/ny-img3.png" alt="" />
 							  				</div>
 							  				<div class="notification-info">
 							  					<h3><a href="messages.jsf" title="">Jassica William</a></h3>
@@ -135,7 +135,7 @@
 									<div class="nott-list">
 										<div class="notfication-details">
 							  				<div class="noty-user-img">
-							  					<img src="images/resources/ny-img1.png" alt="" />
+							  					<img src="images/ny-img1.png" alt="" />
 							  				</div>
 							  				<div class="notification-info">
 							  					<h3><a href="#" title="">Jassica William</a> Comment on your project.</h3>
@@ -144,7 +144,7 @@
 						  				</div>
 						  				<div class="notfication-details">
 							  				<div class="noty-user-img">
-							  					<img src="images/resources/ny-img2.png" alt="" />
+							  					<img src="images/ny-img2.png" alt="" />
 							  				</div>
 							  				<div class="notification-info">
 							  					<h3><a href="#" title="">Jassica William</a> Comment on your project.</h3>
@@ -153,7 +153,7 @@
 						  				</div>
 						  				<div class="notfication-details">
 							  				<div class="noty-user-img">
-							  					<img src="images/resources/ny-img3.png" alt="" />
+							  					<img src="images/ny-img3.png" alt="" />
 							  				</div>
 							  				<div class="notification-info">
 							  					<h3><a href="#" title="">Jassica William</a> Comment on your project.</h3>
@@ -162,7 +162,7 @@
 						  				</div>
 						  				<div class="notfication-details">
 							  				<div class="noty-user-img">
-							  					<img src="images/resources/ny-img2.png" alt="" />
+							  					<img src="images/ny-img2.png" alt="" />
 							  				</div>
 							  				<div class="notification-info">
 							  					<h3><a href="#" title="">Jassica William</a> Comment on your project.</h3>
@@ -182,7 +182,7 @@
 					</div><!--menu-btn end-->
 					<div class="user-account">
 						<div class="user-info">
-							<img src="images/resources/user.png" alt="" />
+							<img src="images/user.png" alt="" />
 							<a href="#" title="">John</a>
 							<i class="la la-sort-down"></i>
 						</div>
@@ -231,7 +231,7 @@
 
 
 		<section class="cover-sec">
-			<img src="images/resources/cover-img.jpg" alt="" />
+			<img src="images/cover-img.jpg" alt="" />
 		</section>
 
 
@@ -244,7 +244,7 @@
 								<div class="main-left-sidebar">
 									<div class="user_profile">
 										<div class="user-pro-img">
-											<img src="images/resources/user-pro-img.png" alt="" />
+											<img src="images/user-pro-img.png" alt="" />
 										</div><!--user-pro-img end-->
 										<div class="user_pro_status">
 											
