--- a/spectrum-web/src/main/webapp/enterprise/create_companies_profiles.xhtml
+++ b/spectrum-web/src/main/webapp/enterprise/create_companies_profiles.xhtml
@@ -90,7 +90,7 @@
 									<div class="nott-list">
 										<div class="notfication-details">
 							  				<div class="noty-user-img">
-							  					<img src="images/resources/ny-img1.png" alt="" />
+							  					<img src="images/ny-img1.png" alt="" />
 							  				</div>
 							  				<div class="notification-info">
 							  					<h3><a href="messages.jsf" title="">Jassica William</a> </h3>
@@ -100,7 +100,7 @@
 						  				</div>
 						  				<div class="notfication-details">
 							  				<div class="noty-user-img">
-							  					<img src="images/resources/ny-img2.png" alt="" />
+							  					<img src="images/ny-img2.png" alt="" />
 							  				</div>
 							  				<div class="notification-info">
 							  					<h3><a href="messages.jsf" title="">Jassica William</a></h3>
@@ -110,7 +110,7 @@
 						  				</div>
 						  				<div class="notfication-details">
 							  				<div class="noty-user-img">
-							  					<img src="images/resources/ny-img3.png" alt="" />
+							  					<img src="images/ny-img3.png" alt="" />
 							  				</div>
 							  				<div class="notification-info">
 							  					<h3><a href="messages.jsf" title="">Jassica William</a></h3>
@@ -137,7 +137,7 @@
 									<div class="nott-list">
 										<div class="notfication-details">
 							  				<div class="noty-user-img">
-							  					<img src="images/resources/ny-img1.png" alt="" />
+							  					<img src="images/ny-img1.png" alt="" />
 							  				</div>
 							  				<div class="notification-info">
 							  					<h3><a href="#" title="">Jassica William</a> Comment on your project.</h3>
@@ -146,7 +146,7 @@
 						  				</div>
 						  				<div class="notfication-details">
 							  				<div class="noty-user-img">
-							  					<img src="images/resources/ny-img2.png" alt="" />
+							  					<img src="images/ny-img2.png" alt="" />
 							  				</div>
 							  				<div class="notification-info">
 							  					<h3><a href="#" title="">Jassica William</a> Comment on your project.</h3>
@@ -155,7 +155,7 @@
 						  				</div>
 						  				<div class="notfication-details">
 							  				<div class="noty-user-img">
-							  					<img src="images/resources/ny-img3.png" alt="" />
+							  					<img src="images/ny-img3.png" alt="" />
 							  				</div>
 							  				<div class="notification-info">
 							  					<h3><a href="#" title="">Jassica William</a> Comment on your project.</h3>
@@ -164,7 +164,7 @@
 						  				</div>
 						  				<div class="notfication-details">
 							  				<div class="noty-user-img">
-							  					<img src="images/resources/ny-img2.png" alt="" />
+							  					<img src="images/ny-img2.png" alt="" />
 							  				</div>
 							  				<div class="notification-info">
 							  					<h3><a href="#" title="">Jassica William</a> Comment on your project.</h3>
@@ -184,7 +184,7 @@
 					</div><!--menu-btn end-->
 					<div class="user-account">
 						<div class="user-info">
-							<img src="images/resources/user.png" alt="" />
+							<img src="images/user.png" alt="" />
 							<a href="#" title="">John</a>
 							<i class="la la-sort-down"></i>
 						</div>
