--- a/spectrum-web/src/main/webapp/jobs/candidacies.xhtml
+++ b/spectrum-web/src/main/webapp/jobs/candidacies.xhtml
@@ -3,7 +3,7 @@
 	xmlns:f="http://java.sun.com/jsf/core"
 	xmlns:h="http://java.sun.com/jsf/html"
 	xmlns:p="http://primefaces.org/ui"
-	template="../template/template.xhtml">
+	template="../resources/template/template.xhtml">
 
 <ui:define name="title">
 	<title>Jobs</title>
