--- a/spectrum-web/src/main/webapp/Register.xhtml
+++ b/spectrum-web/src/main/webapp/Register.xhtml
@@ -70,7 +70,7 @@
 					</div>
 					<div class="container-login100-form-btn" >
 							
-							<h:commandButton style="background:#2196F3;cursor: pointer;" class="login100-form-btn" value="Register" 
+							<h:commandButton style="background:#e44d3a;cursor: pointer;" class="login100-form-btn" value="Register" 
 							action="#{enterprisebean.signup}"/>
 					</div>
 
