--- a/spectrum-web/src/main/webapp/coach/Register.xhtml
+++ b/spectrum-web/src/main/webapp/coach/Register.xhtml
@@ -63,7 +63,7 @@
 					
 					<div class="container-login100-form-btn" >
 							
-							<h:commandButton style="background:#2196F3;cursor: pointer;" class="login100-form-btn" value="Registe" action="#{medecinBean.verifierpass()}"/>
+							<h:commandButton style="background:#e44d3a;cursor: pointer;" class="login100-form-btn" value="Registe" action="#{medecinBean.verifierpass()}"/>
 					</div>
 
 			
