--- a/spectrum-web/src/main/webapp/enterprise/create_companies_profiles.xhtml
+++ b/spectrum-web/src/main/webapp/enterprise/create_companies_profiles.xhtml
@@ -241,7 +241,7 @@
 				<div class="companies-list">
 					
 						 
-                        <h:form id="form" class="form-horizontal" style="background-color: #2196F3;padding: 10px;" >
+                        <h:form id="form" class="form-horizontal" style="background-color: #e44d3a;padding: 10px;" >
  
                               <h:panelGrid columns="2" style="margin : 0 auto;" >
                                    <h:inputText id="username" value="#{enterprisebean.userName}" pt:placeholder="username*"  styleClass="form-control" />
