--- a/spectrum-web/src/main/webapp/enterprise/testt.xhtml
+++ b/spectrum-web/src/main/webapp/enterprise/testt.xhtml
@@ -34,7 +34,7 @@
 
 </body>
 
- <h:form id="form" class="form-horizontal" style="background-color: #2196F3;
+ <h:form id="form" class="form-horizontal" style="background-color: #e44d3a;
 padding: 10px;" >
  
   <h:panelGrid columns="2" style="margin : 0 auto;" >
