--- a/spectrum-web/src/main/webapp/login.xhtml
+++ b/spectrum-web/src/main/webapp/login.xhtml
@@ -31,7 +31,8 @@
 					</div>
 					
 					<div class="container-login100-form-btn" >
-							<h:commandButton style="background:#2196F3;cursor: pointer;" class="login100-form-btn" value="login" action="#{loginBean.do_Login()}"/>
+							<h:commandButton style="background:#e44d3a;cursor: pointer;" class="login100-form-btn" value="login" 
+							action="#{loginBean.do_Login()}"/>
 					</div>
 		</h:form>
 	</ui:define>
