--- a/spectrum-web/src/main/webapp/validate.xhtml
+++ b/spectrum-web/src/main/webapp/validate.xhtml
@@ -24,7 +24,7 @@
 					</div>
 					<h:messages style="color:red;"></h:messages>
 					<div class="container-login100-form-btn" >
-							<h:commandButton style="background:#2196F3;cursor: pointer;" class="login100-form-btn" value="validate" 
+							<h:commandButton style="background:#e44d3a;cursor: pointer;" class="login100-form-btn" value="validate" 
 							action="#{enterprisebean.validateAccount}"/>
 					</div>
 			
